--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ header {
   z-index: -1;
   opacity: 0.7;
   pointer-events: none;
+  max-width: 100vw;
 }
 
 .deco-1 { bottom: 25%; left: -60px; width: 270px; }
@@ -142,14 +143,15 @@ section {
     position: absolute;     /* 🔥 MOBILE FIX */
     opacity: 0.35;
     filter: blur(0.5px);
+    pointer-events: none;
   }
 
-  .deco-1 { width: 140px; left: -40px; top: 12%; }
-  .deco-2 { width: 80px;  left: 55%;  top: 8%; }
-  .deco-3 { width: 180px; left: -60px; bottom: 8%; }
-  .deco-4 { width: 70px;  right: 12%; top: 30%; }
-  .deco-5 { width: 90px;  right: -30px; bottom: 28%; }
-  .deco-6 { width: 160px; right: -40px; bottom: -6%; }
+  .deco-1 { width: 140px; left: 0; top: 12%; }
+  .deco-2 { width: 80px;  left: 55%; top: 8%; }
+  .deco-3 { width: 180px; left: 0; bottom: 8%; }
+  .deco-4 { width: 70px;  right: 8%; top: 30%; }
+  .deco-5 { width: 90px;  right: 0; bottom: 28%; }
+  .deco-6 { width: 160px; right: 0; bottom: -6%; }
 }
 
 /* VERY SMALL PHONES */
