--- a/index.html
+++ b/index.html
@@ -51,6 +51,47 @@ body {
   text-decoration: none;
 }
 
+.nav-menu a:hover {
+      color: #7dd3fc;
+}
+
+
+    /* DROPDOWN */
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown-menu {
+      position: absolute;
+      top: 120%;
+      left: 0;
+      background-color: #1a1a1a;
+      list-style: none;
+      padding: 10px 0;
+      display: none;
+      min-width: 160px;
+      border-radius: 8px;
+    }
+
+    .dropdown-menu a {
+      display: block;
+      padding: 8px 16px;
+      color: white;
+    }
+
+    .dropdown-menu a:hover {
+      background-color: #2a2a2a;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+    }
+
+    .dropdown:hover .dropdown-menu {
+      display: block;
+    }
+
+
 /* HEADER */
 header {
   padding: 10px 20px;
@@ -90,6 +131,10 @@ section {
   padding: 80px 20px;
 }
 
+
+h2 {
+  margin-bottom: 20px;
+}
 /* PROJECT GRID */
 .projects {
   display: grid;
@@ -128,12 +173,42 @@ section {
   text-shadow: 0 2px 10px rgba(0,0,0,0.8);
 }
 
+ footer {
+      text-align: center;
+      padding: 40px;
+      background-color: #111;
+      color: #888;
+  }
+ 
 .project-link {
   text-decoration: none;
   color: inherit;
   display: block;
 }
+ a:hover {
+      text-decoration: underline;
+    }
 
+.img-protect {
+  position: relative;
+  display: block;
+}
+
+.img-protect img {
+  display: block;
+  width: 100%;
+  height: auto;
+  -webkit-user-drag: none;
+  user-select: none;
+}
+
+.img-protect::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: transparent;
+  pointer-events: auto;
+}
 /* ======================
    MOBILE OVERRIDE
    ====================== */
@@ -166,21 +241,41 @@ section {
 
 <body>
 
+
+<!-- NAV -->
 <nav class="navbar">
   <div class="nav-logo">VZ</div>
   <ul class="nav-menu">
-    <li><a href="#projects">Projects</a></li>
+    <li><a href="#about">About</a></li>
+
+    <li class="dropdown">
+      <a href="#projects">Projects ▾</a>
+      <ul class="dropdown-menu">
+        <li><a href="#characters">Characters</a></li>
+        <li><a href="#games">Games</a></li>
+        <li><a href="#techart">Technical Art</a></li>
+      </ul>
+    </li>
+
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
+<!-- HEADER -->
 <header>
-  <img src="images/glow.png" class="logo">
+  <img src="images/glow.png" alt="Logo" class="logo">
 </header>
 
+<!-- PROJECTS -->
 <section id="projects">
+
+  <!-- Anchor targets -->
+  <div id="characters"></div>
+  <div id="games"></div>
+  <div id="techart"></div>
+
   <div class="projects">
-    <a href="#" class="project-link">
+    <a href="pig-island.html" class="project-link">
       <div class="card image-only">
         <div class="image-wrapper">
           <img src="images/pig_island.jpg">
@@ -188,21 +283,68 @@ section {
         </div>
       </div>
     </a>
+
+    <a href="boonie.html" class="project-link">
+      <div class="card image-only">
+        <div class="image-wrapper">
+          <img src="images/boonie.png">
+          <h3>Boonie</h3>
+        </div>
+      </div>
+    </a>
+
+    <a href="luma.html" class="project-link">
+    <div class="card image-only">
+      <div class="image-wrapper">
+        <img src="images/Luma.png">
+        <h3>Luma</h3>
+      </div>
+    </div>
+    </a>
+    <a href="yola.html" class="project-link">
+    <div class="card image-only">
+      <div class="image-wrapper">
+        <img src="images/Maxxi.png">
+        <h3>Maxxi</h3>
+      </div>
+    </div>
+    </a>
+    <a href="yola.html" class="project-link">
+    <div class="card image-only">
+      <div class="image-wrapper">
+        <img src="images/yola.png">
+        <h3>Yola</h3>
+      </div>
+    </div>
+    </a>
+    <div class="card image-only">
+      <div class="image-wrapper">
+        <img src="images/croco.png">
+        <h3>Fruitstyle</h3>
+      </div>
+    </div>
   </div>
 </section>
 
+<!-- CONTACT -->
 <section id="contact">
   <h2>Contact</h2>
-  <p>yourmail@email.com</p>
+  <p>
+    vzvisdev@email.com<br>
+    ArtStation · LinkedIn
+  </p>
 </section>
+<script>
+  document.querySelectorAll("img").forEach(img => {
+    img.addEventListener("contextmenu", e => e.preventDefault());
+  });
+</script>
 
-<!-- DECOR -->
 <img src="images/decor_01.png" class="deco deco-1">
 <img src="images/decor_02.png" class="deco deco-2">
 <img src="images/decor_03.png" class="deco deco-3">
 <img src="images/decor_04.png" class="deco deco-4">
 <img src="images/decor_05.png" class="deco deco-5">
 <img src="images/decor_06.png" class="deco deco-6">
-
 </body>
 </html>
